# metriq-api

./: .gitignore  .gitmodules  README.md  api-routes.js  config.js  index.js  metriq-pull.sh  metriq-start.sh  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: api-test.yml  deploy-qa.yml  node.js.yml
benchmark/: README.md  metadata.py  pyproject.toml  run.py
controller/: accountController.js  contactController.js  deleteController.js  loginController.js  methodController.js  registerController.js  resultController.js  submissionController.js  tagController.js  taskController.js  userController.js
coverage/: db-handler.js  login.test.js  method.test.js  register.test.js  result.test.js  submission.test.js  tag.test.js  task.test.js  user.test.js
metriq-api/: .babelrc  README.md  api-routes.js  config.js  index.js  package-lock.json  package.json
metriq-api/config/: config.js
metriq-api/controller/: accountController.js  architectureController.js  arxivController.js  dataTypeController.js  methodController.js  platformController.js  propertyController.js  providerController.js  resultController.js  submissionController.js  tagController.js  taskController.js  userController.js
model/: contactModel.js  methodModel.js  resultModel.js  submissionModel.js  tagModel.js  taskModel.js  userModel.js
service/: methodService.js  mongooseService.js  resultService.js  submissionService.js  tagService.js  taskService.js  userService.js
tests/: db-handler.js  login.test.js  register.test.js
(+122 files in other folders)
