[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["vprusso <vincentrusso1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gitpython = "^3.1.30"
numpy = "1.23.5"
qiskit = "^0.39.5"
matplotlib = "^3.6.3"
cirq = "^1.1.0"
amazon-braket-sdk = "^1.35.3"
metriq-client = { git = "https://github.com/unitaryfund/metriq-client.git", branch = "development" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
